--- a/GLue/GLue.vcxproj.filters
+++ b/GLue/GLue.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="Source\Include\Shader.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Include\stb_image.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Source\Shaders\Fragment.glsl" />
