--- a/GLue/GLue.vcxproj
+++ b/GLue/GLue.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LibExternas\GLAD\include\glad\glad.h" />
+    <ClInclude Include="Source\Include\Camera.h" />
     <ClInclude Include="Source\Include\Shader.h" />
     <ClInclude Include="Source\Include\stb_image.h" />
   </ItemGroup>
