--- a/GLue/GLue.vcxproj
+++ b/GLue/GLue.vcxproj
@@ -152,7 +152,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Source\Shaders\Fragment.glsl" />
+    <None Include="Source\Shaders\fUI.glsl" />
     <None Include="Source\Shaders\Vertex.glsl" />
+    <None Include="Source\Shaders\vUI.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
